tests/paczka1/fuzzy1/47482268.err
Error in line 22: S456 S993 15,22
Error in line 21: C5B A833 78,8
Error in line 10: S456 S993 4,9
Error in line 24: C5B S359 88,8
